--- a/BagOfFunnies/app/src/main/AndroidManifest.xml
+++ b/BagOfFunnies/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RiddlePage"></activity>
+        <activity android:name=".RiddlePage" />
+        <activity android:name=".DadJokePage"></activity>
     </application>
 
 </manifest>
