Added knock knock jokes and removed puns,nsfw and jokes

--- a/BagOfFunnies/app/src/main/AndroidManifest.xml
+++ b/BagOfFunnies/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RiddlePage" />
-        <activity android:name=".DadJokePage"></activity>
+        <activity android:name=".DadJokePage" />
+        <activity android:name=".KnockKnockJoke"></activity>
     </application>
 
 </manifest>
